--- a/src/index.css
+++ b/src/index.css
@@ -167,3 +167,9 @@ body {
     transform: rotate(360deg);
   }
 }
+
+.about {
+	border-radius: 6px;
+	border: 1px solid #2ecc71;
+	font-size: 16px;
+}
